--- a/guestRaces/orcs.html
+++ b/guestRaces/orcs.html
@@ -74,23 +74,7 @@
                 <ul class="navbar-nav ms-auto text-center">
                     <li class="bigSpacing nav-item dropdown">
                         <a class="nav-link text-warning dropdown-toggle" href="#" id="navbar_guestraces" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-                    <div class="dropdown-menu bg-gradient_skin_background_to_skin_light_background" id="guestRacesDropdown" aria-labelledby="navbarDropdown" style="width: max-content">
-                        <!--<a class="dropdown-item" href="revengeofexile.html" id="navitem_fairies">Revenge of the Exile</a>
-                        <a class="dropdown-item" href="teamspirit.html" id="navitem_fairies">Team Spirit</a>
-                        <a class="dropdown-item" href="traders.html" id="navitem_fairies">Traders of Unur</a>
-                        <a class="dropdown-item" href="embassies.html" id="navitem_fairies">Embassies</a>
-                        <a class="dropdown-item" href="elvenar.html" id="navitem_fairies">Elvenar</a>
-                        <a class="dropdown-item" href="constructs.html" id="navitem_fairies">Constructs</a>
-                        <a class="dropdown-item" href="amuni.html" id="navitem_fairies">Amuni</a>
-                        <a class="dropdown-item" href="elementals.html" id="navitem_fairies">Elementals</a>
-                        <a class="dropdown-item" href="halflings.html" id="navitem_fairies">Halflings</a>
-                        <a class="dropdown-item" href="sorcerers.html" id="navitem_fairies">Sorcerers and Dragons</a>
-                        <a class="dropdown-item" href="woodelves.html" id="navitem_fairies">Woodelves</a>
-                        <a class="dropdown-item" href="orcs.html" id="navitem_fairies">Orcs and Goblins</a>
-                        <a class="dropdown-item" href="fairies.html" id="navitem_fairies">Fairies</a>
-                        <a class="dropdown-item" href="dwarves.html" id="navitem_dwarves">Dwarves</a>-->
-                        <!--<div class="dropdown-divider"></div>-->
-                    </div>
+                    <div class="dropdown-menu bg-gradient_skin_background_to_skin_light_background" id="guestRacesDropdown" aria-labelledby="navbarDropdown" style="width: max-content"></div>
                     </li>
                     <li class="bigSpacing">
                         <a href="../buildings.html" class="nav-link text-warning" id="all_buildings"></a>
@@ -101,7 +85,8 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbar_more" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="width: max-content">
-                        <a class="dropdown-item" href="../contact.html" id="navitem_contact">Contact & About Me</a>
+                        <a class="dropdown-item" href="contact.html" id="navitem_contact">Contact</a>
+                        <a class="dropdown-item" href="about-me.html" id="navitem_contact">About Me</a>
                         <a class="dropdown-item" href="../donate-create.html" id="navitem_donate">Donate</a>
                         <!--<div class="dropdown-divider"></div>-->
                     </div>
