--- a/about-me.html
+++ b/about-me.html
@@ -48,7 +48,7 @@
     <!--<script  src="javascript/config.js"></script>-->
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
-    <title>Donate - iDavis Elvenar</title>
+    <title>About Me - iDavis Elvenar</title>
     <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
@@ -88,8 +88,8 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbar_more" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="width: max-content">
                         <a class="dropdown-item" href="contact.html" id="navitem_contact">Contact</a>
-                        <a class="dropdown-item" href="about-me.html" id="navitem_contact">About Me</a>
-                        <a class="dropdown-item" href="donate-create.html" id="navitem_donate">&#x203A; Donate &#x2039;</a>
+                        <a class="dropdown-item" href="about-me.html" id="navitem_contact">&#x203A; About Me &#x2039;</a>
+                        <a class="dropdown-item" href="donate-create.html" id="navitem_donate">Donate</a>
                         <!--<div class="dropdown-divider"></div>-->
                     </div>
                     </li>
@@ -160,18 +160,27 @@
     <div class="row" style="margin-top: 50px;">
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto ">
             <div class="card card-signin my-5 ">
-                <div class="card-body " id="contact_body">
-                    <h1 id="donate" class="card-title text-center text-warning">Donate</h1>
-                    <h6 class="card-title text-center">If you like the Database Portal and would like to support
-                        me with its further creation, you can use the button below to make a donation. <br><br>This is
-                    completely voluntary and you can do so if you like the content I create and feel inclined.<br><br></h6>
-                    <center><form action="https://www.paypal.com/donate" method="post" target="_top">
-                        <input type="hidden" name="hosted_button_id" value="F8F4Z9DYR2QFG" />
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-                        <img alt="" border="0" src="https://www.paypal.com/en_SK/i/scr/pixel.gif" width="1" height="1" />
-                        </form>                                           
-                        </center>
-                        
+                <div class="card-body ">
+                    <h1 id="about_me" class="card-title text-center text-warning">About Me</h1>
+                    <h6 class="card-title text-center">I would like to use this space to share some information
+                        about me, both as a player and as a person. Not sure how many people
+                    are actually interested in any side information, so I will also add something
+                    about my YouTube channel and this website.<br><br>My name is David, I come from
+                        Slovakia, its beautiful capital city Bratislava and I'm a computer science student.<br><br>
+                    This website was created as my hobby, free-time project, originally coming from the idea of creating
+                    a very first interactive database of all buildings from the game Elvenar, published
+                        by InnoGames. Since its initial launch in March 2021 I keep updating the website,
+                        for both - updating the database with the newest buildings from all the introduced events
+                        and updating the existing code for adding new features and additional improvements.<br><br>
+                        You may also know my YouTube channel - iDavis. I started developing this channel back in
+                        February 2019, with the initial idea of sharing a gameplay video from the event at
+                        that time. Over time the creation of my videos went across many different topics and ideas.
+                        Currently, I have several brand new ideas for the upcoming videos,
+                        that will also expand my portfolio with another game by InnoGames.<br><br>
+                        <h1 id="about_me" class="card-title text-center text-warning">Donate</h1>
+                        Would you like to support me with the content creation? You can use the 
+                        <b><a class="text-link" href="donate-create.html">Donate</a></b> page to make a donation.
+                    </h6>
                 </div>
             </div>
         </div>
