gr links correction

--- a/guestRaces/orcs.html
+++ b/guestRaces/orcs.html
@@ -85,8 +85,8 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbar_more" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="width: max-content">
-                        <a class="dropdown-item" href="contact.html" id="navitem_contact">Contact</a>
-                        <a class="dropdown-item" href="about-me.html" id="navitem_contact">About Me</a>
+                        <a class="dropdown-item" href="../contact.html" id="navitem_contact">Contact</a>
+                        <a class="dropdown-item" href="../about-me.html" id="navitem_contact">About Me</a>
                         <a class="dropdown-item" href="../donate-create.html" id="navitem_donate">Donate</a>
                         <!--<div class="dropdown-divider"></div>-->
                     </div>
