more dropdown color

--- a/fellowship-adventures.html
+++ b/fellowship-adventures.html
@@ -87,9 +87,9 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbar_more" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="width: max-content">
+                    <div class="dropdown-menu bg-gradient_menu_dropdown" aria-labelledby="navbarDropdown" style="width: max-content">
                         <a class="dropdown-item" href="fellowship-adventures.html" id="navitem_contact"><img src="https://i.ibb.co/8mQV9TJ/fellowship-adventures-waypoint.png" style="width: 25px; margin-right: 5px; margin-bottom: 4px;">&#x203A; Fellowship Adventures &#x2039;</a>
-                        <div class="dropdown-divider"></div>
+                        <div class="dropdown-divider" style="height: 2px; background-color: rgb(97, 83, 66);"></div>
                         <a class="dropdown-item" href="contact.html" id="navitem_contact">Contact</a>
                         <a class="dropdown-item" href="about-me.html" id="navitem_contact">About Me</a>
                         <a class="dropdown-item" href="donate-create.html" id="navitem_donate">Donate</a>
