--- a/buildings.html
+++ b/buildings.html
@@ -84,11 +84,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbar_more" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="width: max-content">
-                        <a class="dropdown-item" href="contact.html" id="navitem_contact">Contact</a>
-                        <a class="dropdown-item" href="about-me.html" id="navitem_contact">About Me</a>
-                        <a class="dropdown-item" href="donate-create.html" id="navitem_donate">Donate</a>
-                        <!--<div class="dropdown-divider"></div>-->
+                    <div class="dropdown-menu bg-gradient_menu_dropdown" id="more_navbar" aria-labelledby="navbarDropdown" style="width: max-content">
                     </div>
                     </li>
                     <li>
@@ -126,74 +122,15 @@
         </nav>
         <script>
             document.getElementById("home").innerHTML += " "+langUI("Home");
-            document.getElementById("all_buildings").innerHTML = "&#x203A; "+langUI("All Buildings")+" &#x2039;";
-            document.getElementById("all_events").innerHTML = langUI("All Events");
+            document.getElementById("all_buildings").innerHTML = `&#x203A; <img src="https://i.ibb.co/NC00fM1/all-buildings.png" style="width: 24px; margin-bottom: 4px;"> ${langUI("All Buildings")} &#x2039;`;
+            document.getElementById("all_events").innerHTML = `<img src="https://i.ibb.co/QkJ7qzP/all-events.png" style="width: 27px; margin-bottom: 1px;"> ${langUI("All Events")}`;
             document.getElementById("navbar_more").innerHTML = langUI("More");
-            document.getElementById("navbar_guestraces").innerHTML = langUI("All Guest Races");
+            document.getElementById("navbar_guestraces").innerHTML = `<img src="https://i.ibb.co/d40mvg2/all-guestraces.png" style="width: 25px; margin-bottom: 4px;"> ${langUI("All Guest Races")}`;
 
             generateGuestRacesDropdown();
+            generateMoreNavbar();
         </script>
     </div>
-
-    <!--<nav class="navbar navbar-light fixed-top bg-dark highest1">
-        <button class="navbar-toggler navbar-toggler-right bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" onclick="rollDownNavigation()">
-            <span class="navbar-toggler-icon"> </span>
-        </button>
-        <a href="index.html" class="navbar-brand text-white"id="home"><img src="images/general/home.png" width="30" style="position: relative;"></a>
-        <a href="https://www.youtube.com/channel/UCRzBOCps1xnc1h8xhNK2hzg?sub_confirmation=1" target="_blank">
-            <button type="button" class="btn btn-outline-warning">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
-                <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
-                </svg>
-                <span class="visually-hidden">iDavis Youtube</span>
-            </button>
-        </a>
-        <a href="buildings.html" class="nav-link text-warning" id="all_buildings"></a>
-        <a href="events.html" class="nav-link text-warning" id="all_events"></a>
-
-        <script>
-            document.getElementById("home").innerHTML += " "+langUI("Home");
-            document.getElementById("all_buildings").innerHTML = "&#x203A; "+langUI("All Buildings")+" &#x2039;";
-            document.getElementById("all_events").innerHTML = langUI("All Events");
-        </script>
-
-        <div>
-            <div style="margin-right: 10px; position: relative; display: inline-block;">
-                <a href="donate-create.html"><img src="images/general/donate_button.png"></a>
-            </div>
-            <div class="dropdown" style="margin-right: -10px; position: relative; display: inline-block;">
-                <button class="btn btn-default dropdown-toggle" type="button" id="menu2" data-toggle="dropdown">
-                    <img src="" id="preset_chapter" style="width: 28px; position: relative">
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" style="width: max-content;" role="menu" aria-labelledby="menu1" id="chapters_dropdown">
-                </ul>
-            </div>
-            <div class="dropdown" style="margin-right: 40px; position: relative; display: inline-block;">
-                <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
-                    <img src="images/general/globe_big.png" style="width: 30px; position: relative">
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('en')"><img src="images/general/lang_en.png" style="margin-right: 3px; margin-left: 3px;">EN</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('cz')"><img src="images/general/lang_cz.png" style="margin-right: 3px; margin-left: 3px;">CZ</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('de')"><img src="images/general/lang_de.png" style="margin-right: 3px; margin-left: 3px;">DE</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('fr')"><img src="images/general/lang_fr.png" style="margin-right: 3px; margin-left: 3px;">FR</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('pl')"><img src="images/general/lang_pl.png" style="margin-right: 3px; margin-left: 3px;">PL</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('ru')"><img src="images/general/lang_ru.png" style="margin-right: 3px; margin-left: 3px;">RU</a></li>
-                </ul>
-            </div>
-            <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;top: 5px;position: absolute;">
-        </div>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link text-white" href=#>Soon</a>
-                <a class="nav-item nav-link text-white" href="contact.html">Contact & About Me</a>
-                <a class="nav-item nav-link text-white" href="donate-create.html">Donate</a>
-                <a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>
-            </div>
-        </div>
-    </nav>-->
 </head>
 <body onload="readBuildingsJSON()">
 
