--- a/donate-create.html
+++ b/donate-create.html
@@ -124,10 +124,10 @@
         </nav>
         <script>
             document.getElementById("home").innerHTML += " "+langUI("Home");
-            document.getElementById("all_buildings").innerHTML = langUI("All Buildings");
-            document.getElementById("all_events").innerHTML = langUI("All Events");
+            document.getElementById("all_buildings").innerHTML = `<img src="https://i.ibb.co/NC00fM1/all-buildings.png" style="width: 24px; margin-bottom: 4px;"> ${langUI("All Buildings")}`;
+            document.getElementById("all_events").innerHTML = `<img src="https://i.ibb.co/QkJ7qzP/all-events.png" style="width: 27px; margin-bottom: 1px;"> ${langUI("All Events")}`;
             document.getElementById("navbar_more").innerHTML = langUI("More");
-            document.getElementById("navbar_guestraces").innerHTML = langUI("All Guest Races");
+            document.getElementById("navbar_guestraces").innerHTML = `<img src="https://i.ibb.co/d40mvg2/all-guestraces.png" style="width: 25px; margin-bottom: 4px;"> ${langUI("All Guest Races")}`;
 
             generateGuestRacesDropdown();
             generateMoreNavbar();
