navbar adjust size

--- a/buildings.html
+++ b/buildings.html
@@ -52,7 +52,7 @@
     <!-- NAVIGATION -->
 
     <div class="bg-dark">
-        <nav class="navbar navbar-light fixed-top bg-dark highest1 navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-light fixed-top bg-dark highest1 navbar-expand-lg navbar-dark"> <!--// style="max-height: 60px;"-->
             <a id="home" class="navbar-brand text-white" style="margin-left: 20px;" href="index.html">
                 <img src="images/general/home.png" alt="Home" width="35" class="d-inline-block" style="margin-top: -5px;">
                 <span class="text-navbar_main"></span>
