--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Fellowship Adventures on the website!</strong> A brand-new subpage is now available! The Fellowship Adventures have now their content covered in the new page under the More button (September 10th 2022)</li>
                 <li><strong>Autumn Zodiac event arrived!</strong> All buildings from this event are now in the database (August 18th 2022)</li>
                 <li><strong>Chapter 20 arrived!</strong> All buildings have been regenerated to contain values for chapter 20 (August 17th 2022)</li>
                 <li><strong>A Gateway into the Past event arrived!</strong> All buildings from this event are now in the database and you can find various written guides to help you better understand this brand-new game mechanic (July 7th 2022)</li>
