october_xxii quests update

--- a/eventTabs/october_xxii_/tools.html
+++ b/eventTabs/october_xxii_/tools.html
@@ -53,11 +53,11 @@
             </div>
         </div>
 
-        If you want to see how I'm using my tools handle different situations in the forest, you can watch my gameplay video in which I show the timelapse of my Misty Forest
+        If you want to see how I'm using my tools to handle different situations in the forest, you can watch my video in which I show you the timelapse of the Misty Forest
         gameplay:<br><br>
 
         <center>
-          <iframe allowfullscreen="true" src="https://www.youtube.com/embed/vgAHZXUEayk" style="width: 560px; height: 315.2px;"></iframe>
+          <iframe allowfullscreen="true" src="https://www.youtube.com/embed/vgAHZXUEayk" style="max-width: 100%; width: 560px; height: 315.2px;"></iframe>
         </center>
 
     </div>
