october_xxii strategies

--- a/eventTabs/october_xxii_/strategies.html
+++ b/eventTabs/october_xxii_/strategies.html
@@ -1,1 +1,54 @@
-strategies
+<!-- HTML -->
+
+<div id="main">
+
+    <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Strategies ::..<br></h5>
+    <img id="event_banner" src="https://i.ibb.co/Lp5M7jn/october-xxii-strategies.png" alt="undefined" class="center " style="margin-bottom: 15px;">
+
+    <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
+       
+       The Misty Forest is my favorite event type as it is the only mechanic that allows players to fully pull out their
+       strategic skills. Unlike rotating chests or shuffle board events, the tile event gives you much more responsibility on
+       affecting the rewards and progress you receive (which in my opinion makes event much more interesting after all).<br><br>
+
+       In the <b>Tools</b> tab we have described all the tools you have at your disposal. Each of the tools has its own special effect
+       and it's up to you to use them as efficiently as possible! I'm going to describe several well proven strategies that may help
+       you on your way to maximizing your rewards. (The content will be added soon).<br><br>
+
+       <center><img src="https://i.ibb.co/xLLMhtV/tab1-background.png" style="width: 60%;"></center><br>
+
+       <ul>
+        <li><b>Soon</b> <!--When you run into a new task and perform the spawning process too many times, a lot of new pieces 
+            start occupying your space. It is a good rule to try to group your pieces on the board and split them up into different sectors.
+            You can use the left corner for Dwarven Figurines for example, the middle room for Dwarven Tools and the right corner for Dices.
+            Even within these sectors the pieces can be sorted (e.g. by their levels) and that will ease your merging process, especially if you
+            are not familiar with the look of different pieces and levels at the beginning of the game.--></li>
+        <!--<li><b>Do not spawn too many pieces!</b> You can guess the approximate number of times you have to click the Cups buttons in order to
+            merge the required pieces (take a look at the <b>Pieces</b> tab). This will prevent you from having many unused pieces on your board and 
+            prevent the need of using the Discard feature, which would cause loosing your dwarven chips.</li>
+        <li><b>Discard feature!</b> This feature may be helpful for you if your board gets too messed up with other types of pieces than
+            those you need for your current task, but keeping the points above and all the hints from my other tabs in your mind, generally speaking you shouldn't 
+            get there, as the overall size of the board is large enough. I have completed many tasks already and didn't need to use the Discard feature once.</li>
+        --></ul>
+
+      To learn more strategies about Misty Forest, you can watch my dedicated Youtube video:<br><br>
+
+       <center>
+         <iframe allowfullscreen="true" src="https://www.youtube.com/embed/PzUHa4Bat2k" style="max-width: 100%; width: 560px; height: 315.2px;"></iframe>
+       </center>
+
+   </div>
+   
+
+</div>
+  
+<!-- JS DATABASE -->
+
+<script>
+
+
+// JS CODE
+
+
+
+</script>
