october_xxii strategies

--- a/eventTabs/october_xxii_/strategies.html
+++ b/eventTabs/october_xxii_/strategies.html
@@ -18,18 +18,36 @@
        <center><img src="https://i.ibb.co/xLLMhtV/tab1-background.png" style="width: 60%;"></center><br>
 
        <ul>
-        <li><b>Soon</b> <!--When you run into a new task and perform the spawning process too many times, a lot of new pieces 
-            start occupying your space. It is a good rule to try to group your pieces on the board and split them up into different sectors.
-            You can use the left corner for Dwarven Figurines for example, the middle room for Dwarven Tools and the right corner for Dices.
-            Even within these sectors the pieces can be sorted (e.g. by their levels) and that will ease your merging process, especially if you
-            are not familiar with the look of different pieces and levels at the beginning of the game.--></li>
-        <!--<li><b>Do not spawn too many pieces!</b> You can guess the approximate number of times you have to click the Cups buttons in order to
-            merge the required pieces (take a look at the <b>Pieces</b> tab). This will prevent you from having many unused pieces on your board and 
-            prevent the need of using the Discard feature, which would cause loosing your dwarven chips.</li>
-        <li><b>Discard feature!</b> This feature may be helpful for you if your board gets too messed up with other types of pieces than
-            those you need for your current task, but keeping the points above and all the hints from my other tabs in your mind, generally speaking you shouldn't 
-            get there, as the overall size of the board is large enough. I have completed many tasks already and didn't need to use the Discard feature once.</li>
-        --></ul>
+        <li><b>Best ways of using Candle.</b> Candle reveals one single tile you click on and it is the only tool that can be used
+            on a foggy tile. Out of all available tools, it's the most beneficial one towards moving forward in the forest. It can also
+            come handy when you want to pick up rewards you left behind (and are placed far from each other) or to prepare your space for
+            using other tools.
+        </li>
+        <li><b>Best ways of using Lantern.</b> Lantern is extremely useful for receiving information about the surrounding area.
+        It can only be used on an already cleared tile and reveals a column of foggy tiles (the light won't float
+        behind the obstacle, so make sure to use it on such a column, in which there are as little obstacles in the way as possible). You can maximize the information you receive by using lantern
+        in such a column, that is surrounded by as many unrevealed tiles as possible (see 4:22 in the video below for further ilustration).
+        </li>
+        <li><b>Best ways of using Flash Flask.</b> Similarly to lantern, it can only be used on an empty tile. It is the best idea to use
+        Flash Flask when many rewards are placed close to each other, but spread in different columns (see 4:05 in the video). It may
+        also come handy if you just want to move forward in the forest but many obstacles are laid out in your way (see 5:00).
+        </li>
+        <li><b>What to focus on.</b> Find your goal in the event. There are 3 main strategies: 1) Focusing on Grand Prizes, 2) Focusing on
+        Daily Prizes and 3) Going for everything. The difference between these is which rewards you focus on while you make your path
+        in the forest. No matter which of the three strategies you choose, you should always keep in mind that picking up tools is most important
+        and it will help you reaching all of these three goals! Then, depending on your goal, you may focus on the following: cat spirits (if
+        you aim for Grand Prizes), lost items (if you aim for Daily Prizes) and just collect everything you find, if you have no
+        specific prizes of the event you should adhere to.
+        </li>
+        <li><b>Do not clear every tile!</b> There are many rewards hidden inside the Misty Forest, but not all of them contain prizes. Learn
+            about different states of the tiles: empty tile (when no more fog needs to be removed and you can immediately claim the reward),
+            semi foggy tile (you can see whether it contains rewards or not but you need to clear the fog first before you can claim it) and
+            the fully mist tiles (you cannot see whether it contains prizes or not and need to clear some of the adjacent tiles first to find out).
+            You can take advantage of what you know about different states and use these tips to maximize your rewards. If you see that there
+            is no reward hidden the semi foggy tile, there is no reason to clear it. Using your tools strategically will lead to maximizing
+            your information about the surrounding tiles and minimizing the number of fully mist tiles you should leave behind!
+        </li>
+        </ul>
 
       To learn more strategies about Misty Forest, you can watch my dedicated Youtube video:<br><br>
 
