--- a/tournaments.html
+++ b/tournaments.html
@@ -203,7 +203,7 @@
     document.getElementById("select_event_label").innerHTML = langUI("Select event:");
     document.getElementById("generate_daily_prizes_button").innerHTML += langUI("Select Tournament");
 
-    generateFas("input_event");
+    generateTournaments("input_event");
 
     generateChapterDropdown();
 
