december_xxii release

--- a/events.html
+++ b/events.html
@@ -50,6 +50,7 @@
     <script src="database/languages/quests_translationsDictionary.js"></script>
     <script src="database/languages/quests_headers.js"></script>
     <script src="database/flexibleRewards.js"></script>
+    <script src="database/eventsAnnouncements.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
