december_xxii index

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Winter Magic event arrived!</strong> All buildings from this event are now in the database (November 11th 2022)</li>
                 <li><strong>New round of Fellowship Adventures arrived on Beta!</strong> All details about this adventure are now available on the respective page under the More button (October 27th 2022)</li>
                 <li><strong>Mischievious Therapy event arrived!</strong> All buildings from this event are now in the database (September 29th 2022)</li>
                 <li><strong>Fellowship Adventures on the website!</strong> A brand-new subpage is now available! The Fellowship Adventures have now their content covered in the new page under the More button (September 10th 2022)</li>
