--- a/events.html
+++ b/events.html
@@ -51,6 +51,8 @@
     <script src="database/languages/quests_headers.js"></script>
     <script src="database/flexibleRewards.js"></script>
     <script src="database/eventsAnnouncements.js"></script>
+    <script src="database/globalStartDates.js"></script>
+    <script src="javascript/globalRightBar.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
@@ -154,6 +156,8 @@
 
 <div class="hide-show highest2 container bg-skin_background rounded-right75 border-bottom border-right border-top border-popup" style="width: max-content; height: 100px; margin-top: 274px; margin-left: 0px; position: fixed" id="left_bar"></div>
 
+<!--<div class="hide-show highest2 container bg-right_bar_background rounded-left75 border-bottom border-left border-top border-popup" style="width: 125px; height: 400px; margin-top: 230px; margin-right: 0px; right: 0px; position: fixed" id="right_bar"></div>-->
+
 <div style="padding-top: 59px;" id="calendar_top">
     <div style="width: 100%;">
         <div class="container-thick center bg-skin_astable_background rounded-bottom75" style="width: 100%; padding-top: 20px; padding-bottom: 15px; padding-left: 20px; padding-right: 20px;">
@@ -236,6 +240,7 @@
 
     generateChapterDropdown();
     //setLeftBar();
+    //setRightBar();
 
 </script>
 
