--- a/buildings.html
+++ b/buildings.html
@@ -43,6 +43,7 @@
     <script src="database/languages/buildingNamesLanguages.js"></script>
     <script src="javascript/notificationHandler.js"></script>
     <script src="database//notifications.js"></script>
+    <script src="database/eventsSelectors.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
