--- a/fellowship-adventures.html
+++ b/fellowship-adventures.html
@@ -46,6 +46,7 @@
     <script src="javascript/notificationHandler.js"></script>
     <script src="database/notifications.js"></script>
     <script src="database/flexibleRewards.js"></script>
+    <script src="database/eventsSelectors.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
