seasons season pass

--- a/admin.html
+++ b/admin.html
@@ -183,7 +183,15 @@ Odmena1<br></h7>
 
 </div>
 
-    
+<div class="container" style="margin-bottom: 20px;">
+    <p>SeasonPass:</p>
+
+
+    seasonPass: <input class="form-control-file" type="file" id="seasonPass" name="filename">
+    <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateSeasonPass()">GENERATE</button>
+
+</div>
+
 
 </body>
 </html>
