--- a/seasons.html
+++ b/seasons.html
@@ -49,6 +49,8 @@
     <script src="database/eventsSelectors.js"></script>
     <script src="database/globalStartDates.js"></script>
     <script src="database/seasonsQuests.js"></script>
+    <script src="database/seasonPass.js"></script>
+    <script src="database/imagesBuildings.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
