february_xxiii images temp fix

--- a/eventTabs/february_xxiii_/strategies.html
+++ b/eventTabs/february_xxiii_/strategies.html
@@ -3,7 +3,7 @@
 <div id="main">
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Strategies ::..<br></h5>
-    <img id="event_banner" src="https://i.ibb.co/jhVXrb0/february-xxiii-strategies-guide-icon.png" alt="undefined" class="center " style="margin-bottom: 15px;">
+    <img id="event_banner" src="https://i.imgur.com/2FiVBxm.png" alt="undefined" class="center " style="margin-bottom: 15px;"><!--https://i.ibb.co/jhVXrb0/february-xxiii-strategies-guide-icon.png-->
 
     <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
        
@@ -15,7 +15,7 @@
        and it's up to you to use them as efficiently as possible! I'm going to describe several well proven strategies that may help
        you on your way to maximizing your rewards.<br><br>
 
-       <center><img src="https://i.ibb.co/b3t7p9s/february-xxiii-strategies-banner.png" style="width: 60%;"></center><br>
+       <center><img src="https://i.imgur.com/OMydqwL.png" style="width: 60%;"></center><br><!--https://i.ibb.co/b3t7p9s/february-xxiii-strategies-banner.png-->
 
        <ul>
         <li><b>Best ways of using Shovel.</b> Shovel reveals one single tile you click on and it is the only tool that can be used
