--- a/eventTabs/february_xxiii_/tools.html
+++ b/eventTabs/february_xxiii_/tools.html
@@ -3,7 +3,7 @@
 <div id="main">
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Tools ::..<br></h5>
-    <img id="event_banner" src="https://i.ibb.co/9hG7drr/february-xxiii-tools-guide-icon.png" alt="undefined" class="center " style="margin-bottom: 15px;">
+    <img id="event_banner" src="https://i.imgur.com/S0FScAJ.png" alt="undefined" class="center " style="margin-bottom: 15px;"><!--https://i.ibb.co/9hG7drr/february-xxiii-tools-guide-icon.png-->
 
     <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
        
@@ -37,14 +37,14 @@
        out of your Provinsions. You can check the
        <b>Strategies</b> tab to read about well proven strategies of the Buried City.</center><br>
 
-       <center><img src="https://i.ibb.co/XF1jHcY/february-xxiii-window.png" style="width: 60%;"></center><br>
+       <center><img src="https://i.imgur.com/UTKBN3Y.png" style="width: 60%;"></center><br><!--https://i.ibb.co/XF1jHcY/february-xxiii-window.png-->
 
        In the left side of the event window you can see all your currently available tools. To buy more, you need to visit the
        Digging Tool Shop (using the <b>+</b> button under the Vacuum Vial icon).<br><br>
 
        <div class="row" style="margin-top: 20px; margin-bottom: 20px;">
            <div class="col-sm-5">
-             <center><img src="https://i.ibb.co/TK0V4fB/february-xxiii-toolshop.png" style="max-width: 100%;"></center><br>
+             <center><img src="https://i.imgur.com/r6UxkS3.png" style="max-width: 100%;"></center><br><!--https://i.ibb.co/TK0V4fB/february-xxiii-toolshop.png-->
            </div>
            <div class="col-sm-7">
                I recommend you to always purchase the packs of bundled tools (by turns). You will receive the biggest number of tools
